# PythonHM

./: .env  .gitignore  README.MD  pyproject.toml
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  proessing.py  transaction_reader.py  utils.py  widget.py
tests/: conftest.py  main.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_transaction_reader.py  test_utils.py  test_widget.py
